# ecis-orchestrator

./: .gitignore  CLAUDE.md  docker-compose.yaml  init-db.sql  pyproject.toml
docs/: DEMO_GUIDE.md  DEPLOYMENT.md  PRODUCT_MANUAL.md  USER_MANUAL.md
docs/platform/: DEMO_GUIDE.md  USER_MANUAL.md
src/: __init__.py
src/activities/: __init__.py  facility.py  llm.py  notification.py  robot.py
src/api/: __init__.py  main.py
src/api/routes/: __init__.py  approvals.py  delivery.py  tasks.py  templates.py  workflows.py
src/core/: __init__.py  config.py  database.py  exceptions.py
src/federation/: __init__.py  federation_client.py
src/models/: __init__.py  agent.py  base.py  workflow.py
src/services/: __init__.py  task_dispatcher.py  template_service.py  workflow_service.py
src/workers/: __init__.py  main_worker.py
src/workflows/: __init__.py  approval.py  cleaning.py  delivery.py  scheduled.py
templates/: README.md
templates/cleaning/: robot-cleaning-workflow.json
templates/delivery/: robot-delivery-workflow.json
templates/maintenance/: emergency-charging-workflow.json
templates/security/: patrol-inspection-workflow.json
templates/service/: visitor-welcome-workflow.json
temporal-config/: development.yaml
tests/: test_activities_unit.py  test_api_integration.py  test_core.py  test_e2e.py  test_federation.py  test_integration_comprehensive.py  test_models.py  test_services.py  test_templates.py
